# Data-Structure-Course

Array/: CMakeLists.txt
Array/include/: array.h  array.hpp
Array/src/: array.c  array.cpp  driver.c  driver.cpp
Array/test/: array_test.c  array_test.cpp
Matrix/: CMakeLists.txt
Matrix/include/matrix/: base.hpp  diagonal.hpp  exceptions.hpp  triangular.hpp
Matrix/src/: base.cpp  diagonal.cpp  triangular.cpp
Matrix/test/: matrix_diagonal_test.cpp
String/: CMakeLists.txt
String/include/: string.h
String/src/: string.c
String/test/: string_test.c
